Fix the stats page layers on mobile

--- a/assets/css/_layout.sass
+++ b/assets/css/_layout.sass
@@ -320,6 +320,10 @@ main
   +mobile
     margin-top: 40vw
 
+  #statistics
+    +mobile
+      background-color: $light
+
 header.page_head
   text-align: center
   h1
